# circuit-simulator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: laplace_demo.py  simple_circuit.py
src/: circuit.py  component.py  grafical.py
src/circuit_simulator/: __init__.py  circuit.py  components.py
