[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit_simulator"
version = "0.1.0"
description = "A linear circuit simulator using Modified Nodal Analysis (MNA)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/circuit-simulator"
